@@ -154,6 +154,7 @@ _LTDL_SETUP
 LT_LANG(C++)
 LT_LANG(Objective-C)
 LT_LANG(Objective-C++)
+LT_LANG(Microsoft Macro Assembler)
 LT_LANG(Fortran 77)
 LT_LANG(Fortran)
 LT_LANG(Go)
